This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-08-06 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.ac, configure.in: renamed configure.ac back to 
	configure.in due to bug in libtoolize 1.4.2

	* NEWS, README, INSTALL, doc/html/index.html: converted most 
	documentation to HTML.
	
2002-08-06 David Resnick <dresnick@mobilespear.com>
    * msvc6/log4cppDLL/log4cppDLL.rc: Cleanup.
    * msvc6/log4cppDLL/resource.h deleted: Unnecessary.

2002-08-05 David Resnick <dresnick@mobilespear.com>
    * msvc6/log4cppDLL/log4cppDLL.rc, msvc6/log4cppDLL/resource.h:
    Version property sheet added to DLL.

2002-08-04 David Resnick <dresnick@mobilespear.com>
	* src/PropertyConfiguratorImpl.cpp: added RollingFileAppender,
	NTEventLogAppender. Threshold attrib added for appenders. Invalid
	priority in configureCategory prints message of invalid_argument
	exception.
	* src/Priority.cpp: surrounding quotes added around invalid priority
	in thrown invalid_argument exception.
	* tests/testPropConfig.cpp, tests/log4cpp.property, 
	msvc6\testPropConfig\testPropConfig.dsp: test for PropertyConfigurator
	added.
	
2002-08-02 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* doc/Makefile.am, doc/Doxyfile.in, doc/html/index.html,
	doc/html/default.css: added new index page and move Doxygen generated
	docs to api subdirectory.

2002-08-01 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/threading/PThreads.hh: added POSIX threads support
	file contributed by Emiliano Martin.
	* include/log4cpp/threading/Makefile.am,
	include/log4cpp/threading/Threading.hh: add PThreads.hh
	* configure.ac: added test for POSIX threads
	* m4/BB_CHECK_PTHREADS.m4: added. Crude initial pthreads check. Need
	to nick a good macro somewhere else :-)
	* m4/BB_CHECK_OMNITHREADS.m4: added 'thread safity' defines, needed
	at least for STL.
	* THANKS: added Emiliano.
	